add new internal api for get space by id (#119)
* add internal interface for get space by id

* fix dto for space

* fix api docs

* fix issue

* fix issue

* fix issue

* fix issue

* minor update

---------
