# api/swagger.json
@@ -1977,6 +1977,35 @@
                 }
             }
         },
+        "/v2/space/{id}": {
+            "get": {
+                "description": "get space",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "SpaceInternal"
+                ],
+                "summary": "Get",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of space",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.SpaceMetaDTO"
+                        }
+                    }
+                }
+            }
+        },
         "/v2/space/{owner}/{name}": {
             "get": {
                 "description": "get space",
@@ -2161,6 +2190,26 @@
                     }
                 },
                 "task": {
+                    "type": "string"
+                }
+            }
+        },
+        "app.SpaceMetaDTO": {
+            "type": "object",
+            "properties": {
+                "hardware": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "owner": {
+                    "type": "string"
+                },
+                "sdk": {
                     "type": "string"
                 }
             }
